<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_question_bank"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_question_bank" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
